[build-system]
requires = ["setuptools>=61.0", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "smfc"
description = "IPMI Explorer program"
readme = "README.md"
version = "0.1.0"
authors = [
    { name = "Peter Sulyok", email = "peter@sulyok.net" }
]
requires-python = ">=3.8"
keywords = ["ipmi", "sensors", "fancontrol"]
license = {file = "LICENSE"}
dependencies = [
    "textual"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Development Status :: 4 - Beta"
]
[project.urls]
Homepage = "https://github.com/petersulyok/ipmiexplorer"
Changelog = "https://github.com/petersulyok/ipmiexplorer/releases"
Issues = "https://github.com/petersulyok/ipmiexplorer/issues"
[project.optional-dependencies]
test = [
    "pytest",
]
[project.scripts]
ipmiexplorer = "ipmiexplorer.cmd:main"

[tool.setuptools]
packages = ["ipmiexplorer"]

# pytest options
[tool.pytest.ini_options]
filterwarnings = [ "default", "ignore::pytest.PytestCollectionWarning"]

# coverage options
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "unittest.main()"
    ]

# pylint options
[tool.pylint.'MASTER']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "too-many-branches", "too-many-instance-attributes", "too-many-statements", "too-many-arguments",
    "too-many-locals", "too-many-public-methods", "invalid-name", "line-too-long", "missing-module-docstring",
    "pointless-string-statement", "duplicate-code", "unsubscriptable-object", "too-many-lines",
    "assignment-from-no-return", "protected-access", "no-member"
    ]

# End.