[build-system]
requires = ["setuptools>=61.0", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "ipmiexp"
description = "IPMI Explorer"
readme = "README.md"
version = "0.2.0"
authors = [
    { name = "Peter Sulyok", email = "peter@sulyok.net" }
]
requires-python = ">=3.10 ,<4"
keywords = ["ipmi", "sensors", "fancontrol"]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "textual"
]
[dependency-groups]
dev = [
    "build",
    "coverage",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "twine"
]

lint = [
    "ruff",
    "pylint"
]


[project.urls]
Homepage = "https://github.com/petersulyok/ipmiexp"
Changelog = "https://github.com/petersulyok/ipmiexp/releases"
Issues = "https://github.com/petersulyok/ipmiexp/issues"


[project.scripts]
ipmiexp = "ipmiexp.cmd:main"

[tool.setuptools]
packages = ["ipmiexp"]

[tool.uv]
default-groups = ["dev", "lint"]

# pytest options
[tool.pytest.ini_options]
filterwarnings = [ "default", "ignore::pytest.PytestCollectionWarning"]

# coverage options
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "unittest.main()"
    ]

# pylint options
[tool.pylint.'MASTER']
max-line-length=120

[tool.pylint.'MESSAGES CONTROL']
disable= [
    "too-many-branches", "too-many-instance-attributes", "too-many-statements", "too-many-arguments",
    "too-many-locals", "too-many-public-methods", "invalid-name", "line-too-long", "missing-module-docstring",
    "pointless-string-statement", "duplicate-code", "unsubscriptable-object", "too-many-lines",
    "assignment-from-no-return", "protected-access", "no-member"
    ]

# End.